# lwms

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  opencode.json  pyproject.toml
.claude/: SESSION-NOTES.md  settings.json  settings.md
.claude/agents/: code-reviewer.md  python-mt5-engineer.md
.claude/commands/: account-status.md  execute-signal.md  pr-review.md
.claude/hooks/: skill-rules.json
.claude/rules/: code-style.md  git-conventions.md  safety-first.md
.claude/skills/: README.md
.claude/skills/mcp-fastmcp/: SKILL.md
.claude/skills/mt5-python-api/: SKILL.md
.claude/skills/trading-safety/: SKILL.md
data/backtests/: lw-29m-summary.json  lw-hidden-smash-d1-rr2.json  lw-hidden-smash-d1-rr3.json  lw-hidden-smash-h1-rr3.json  lw-hidden-smash-h4-rr3.json  lw-smash-day-d1-rr2.json  lw-smash-day-d1-rr3.json  lw-smash-day-h1-rr3.json  lw-smash-day-h4-rr3.json
docs/: lw-backtest.md  lw.md
mql5/: README.md
mql5/Experts/: LWHiddenSmashDayEA.mq5  LWMarketStructureEA.mq5  LWNonRandomTester.mq5  LWPatternsEA.mq5  LWShortTermSwingEA.mq5  LWSmashDayEA.mq5  LWVolatilityBreakoutEA.mq5
mql5/Include/: LWCommon.mqh
mql5/Indicators/: LWHiddenSmashDay.mq5  LWMarketStructure.mq5  LWSmashDay.mq5
scripts/: backtest_lw.py
src/lwms/: __init__.py  _utils.py  cli.py  client.py  server.py  trade.py
tests/: _lw_helpers.py  test_client.py  test_constants.py  test_lw_backtest.py  test_lw_filters.py  test_lw_nonrandom.py  test_lw_patterns.py  test_lw_resample.py  test_lw_risk.py  test_lw_structure.py  test_lw_volatility.py  test_trade_dry_run.py
(+12 files in other folders)
