[project]
name = "lwms"
version = "0.1.0"
description = "MT5 MCP server scaffold (lwms)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "lwms" }]
license = { text = "MIT" }
dependencies = [
    "MetaTrader5>=5.0.45",
    "fastmcp>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
lwms = "lwms.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lwms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: requires a live MT5 terminal (set MT5_INTEGRATION=1)",
]
